# DOA

./: .gitignore  README.md
TestAudio/num3_MIC5/: 音轨-7.pk
c++/SRP/: CMakeLists.txt  DOA.cbp  DOA_SRP  DelaySum.cpp  DelaySum.h  E.txt  E2.txt  File.cpp  File.h  Makefile  SRP.sln  Sort.cpp  Sort.h  cx_inverse_in_i.txt  main.cpp  main_linux.cpp  main_win32.cpp  wave.c  wave.h  yout1.txt
c++/SRP/Debug/: delaysum.obj.enc
c++/SRP/Release/: SRP.iobj  SRP.ipdb
c++/eigen/: AmbaConfig
c/SRP/: SRP.sln
c/SRP/SRP/: CMakeLists.txt  DOA  DOA.cbp  DelaySum.c  DelaySum.h  Makefile  SRP.sln  cx_inverse_in.txt  cx_inverse_in_r.txt  haha.cbp  main.c  wave.c  wave.h  wavread.cpp  wavread.h  win.h
c/SRP/SRP/Debug/SRP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SRP.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
matlab/: DMA1_b2b.m  DelaySumURA.m  DispAngle.fig  DispAngle.m  GCC_PhaseTransform.m  GCC_phat.m  README.md  test.m
matlab/ArrayTest/: DS_ULA.m  DS_URA_2D.m  DS_URA_3D.m  WDS_URA_3D.m  mscohere_test.m
matlab/GCC-PHAT/: GCC_phat.m
matlab/SRP-PHAT/: Cf.mat  Cf.txt  Cfa.txt  DelaySumURA.m  E.txt  E2.txt  SRP_PHAT.m  SRP_PHAT_URA.m  cx_inverse_in_r.txt  phaseshift.m  postprocessing.m  srp.m  test.m  test_srp.m  yout1.txt
matlab/beamforming/: DelaySumURA.m  HP_Num.mat  IIR_HP.m  TF_LCMV_real.m  drawpatternSuperdirectiveULA.m  fdacoefs.h  main.m  postprocessing.m  superdirectiveMVDR.m
matlab/beamforming/Frost/: DelaySumURA.m  Frost.m  main.m
